--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0"
   }
